--- a/assets/css/style-dark-version.css
+++ b/assets/css/style-dark-version.css
@@ -14,8 +14,10 @@
 
 
 html,body,div,ul,ol,li,a,img,span,p,b,input,label {
-	color: #6fffe9;
+	color: #5bc0be;
 }
+b{color: #6fffe9;}
+
 body{ height: 100%;background-color: #0b132b; }
 
 #all { width: 100%; height:100%;background-color: #0b132b; box-sizing: border-box; padding:20px; z-index: -1;}
@@ -24,7 +26,7 @@ body{ height: 100%;background-color: #0b132b; }
 .tablet {display: none;}
 
 
-/* -----HEADER------ */
+/* ----- HEADER ------ */
 
 header { width: 100%; height: 60px; background-color:#0b132b; position: fixed; top: 0; left: 0; box-shadow: 0px 0px 1px 3px #3a506b;; z-index: 2; box-sizing: border-box; }
 
@@ -36,7 +38,9 @@ header::after {
 #logo {height: 60px; position: fixed; top: 11px; left: 5%; cursor: pointer;}
 #logo a img {width: 35px; float: left;}
 
-/* -----Navigate-mobile----- */
+
+/* ----- Navigate-mobile ----- */
+
 #nav-mobile-button {float: right; cursor: pointer;}
 #nav-mobile-button img{width: 30px; position: fixed; top: 15px; right: 5%;}
 /* #background-nav{position: fixed;top: 0;bottom: 0;left: 0;right: 0; background-color: rgba(0,0,0,.3);} */
@@ -45,7 +49,7 @@ header::after {
 .mobile-logo img {position: absolute; width: 33px; top: 25px; left: 10%;}
 
 .nav-mobile ul {margin-top: 80px;}
-.nav-mobile ul li {padding-bottom: 20px; padding-left:30%;padding-top: 20px;font-size: 25px; text-align: left; font-weight: bold; width: 100%;}
+.nav-mobile ul li {padding-bottom: 20px; padding-left:30%;padding-top: 20px;font-size: 25px; text-align: left; letter-spacing: 4px; width: 100%;}
 .nav-mobile ul li:hover {background-color: #5bc0be; color: #0b132b;} 
 .nav-mobile ul li:hover .nav-icon {display: none;}
 .nav-mobile ul li:hover .mobile-icon-hover{display: block;}
@@ -118,11 +122,9 @@ a.button.six:hover:after{
 }
 
 /* Resume button - Desktop */
-#resume-btn {width: 10%; height: 35px; background-color: #6fffe9; position: fixed; right: 0; top: 12px; border-bottom-left-radius: 15px; border-top-left-radius: 15px; text-align: center; display: none;}
+#resume-btn {width: 10%; height: 35px; background-color: #6fffe9; position: fixed; right: 0; top: 12px; border-bottom-left-radius: 20px; border-top-left-radius: 20px; text-align: center; display: none;}
 #resume-btn p{color: #3a506b; line-height: 35px; font-size: 20px; font-weight:900;}
-
-#resume-btn:hover {cursor: pointer; background-color:#5bc0be;}
-#resume-btn:hover
+#resume-btn:hover {cursor: pointer; background-color:#5bc0be; width: 12%; transform: width .5s;}
 
 /* -----CONTAINER------ */
 
@@ -130,7 +132,7 @@ a.button.six:hover:after{
 
 section {width: 100%; min-height: 100px; margin:0px 0px; z-index: inherit; box-sizing: border-box; color: #5bc0be;}
 .text {padding: 20px 0px; text-align: justify;}
-.text h1 {font-size: 40px; margin-bottom: 10px; margin-top: 0px; color: #6fffe9;}
+.text h1 {font-size: 25px; letter-spacing: 3px; margin-bottom: 10px; margin-top: 0px; color: #6fffe9; text-transform: uppercase;}
 .heading-line {width: 100%; height: 2px; background-color: #6fffe9; margin-bottom: 20px;}
 
 #section-1::after {content: ""; clear: both; width: 0px; height: 0px; display: block;}
@@ -160,15 +162,12 @@ section {width: 100%; min-height: 100px; margin:0px 0px; z-index: inherit; box-s
 }
 
 .right {width: 100%; box-sizing: border-box;}
-#hello-h1-1 {font-size: 35px; margin: 0px;}
-#hello-h1-2 {font-size: 35px; margin: 10px 0px 20px 0px;}
+#hello-h1-1 {font-size: 35px; margin: 0px; color: #6fffe9;}
+#hello-h1-2 {font-size: 35px; margin: 10px 0px 20px 0px; color: #6fffe9;}
 .text-block {font-size: 20px; text-align: left;margin-bottom: 10px;}
 
 
-
-
-
-/* PROJECT */
+/* ---- PROJECT ----*/
 .project-block {width: 90%; margin: auto;}
 .project-block::after{
   content: ""; clear: both;width: 0px;height: 0px;display: block;
