update my profile 24-06-2021

--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,3 +1,20 @@
-#contact-card-btn {}
+.color-1 {background-color: #fef6ef;}
+.color-2 {background-color:#f37239}
+.color-3 {background-color:#6eb5ca}
+.color-4 {background-color:#b8d8e0}
+.color-5 {background-color:#525252}
 
-#contact-card-btn:checked ~ .card-effect-1{border:5px solid #6fffe9;}
+
+
+.color-6 {background-color: #0b132b;}
+.color-7 {background-color:#1c2541;}
+.color-8 {background-color:#3a506b;}
+.color-9 {background-color:#5bc0be;}
+.color-10 {background-color:#6fffe9;}
+
+
+.contact:hover h4{color:#6fffe9;}
+.contact:hover h4>a{color:#6fffe9;}
+
+.contact-item {width: 100%; float: left; display: block; padding: 40px; text-align: center; box-sizing: border-box;}
+.contact-item img {height: 40px; float: left; margin-left: 20px;} 
