--- a/assets/css/style-dark-version.css
+++ b/assets/css/style-dark-version.css
@@ -20,6 +20,7 @@ b{color: #6fffe9;}
 
 body{ height: 100%;background-color: #0b132b; }
 
+
 #all { width: 100%; height:100%;background-color: #0b132b; box-sizing: border-box; padding:20px; z-index: -1;}
 
 .mobile {display: display;}
@@ -133,6 +134,12 @@ a.button.six:hover:after{
 section {width: 100%; min-height: 100px; margin:0px 0px; z-index: inherit; box-sizing: border-box; color: #5bc0be;}
 .text {padding: 20px 0px; text-align: justify;}
 .text h1 {font-size: 25px; letter-spacing: 3px; margin-bottom: 10px; margin-top: 0px; color: #6fffe9; text-transform: uppercase;}
+.media-block {float: left; width: 100%; box-sizing: border-box;}
+.media-block::after {content:""; clear: both; display: block;}
+.media-block img {width: 100%; clear: both;}
+
+
+
 .heading-line {width: 100%; height: 2px; background-color: #6fffe9; margin-bottom: 20px;}
 
 #section-1::after {content: ""; clear: both; width: 0px; height: 0px; display: block;}
@@ -178,10 +185,31 @@ section {width: 100%; min-height: 100px; margin:0px 0px; z-index: inherit; box-s
 
 
 /* ------FOOTER ---------- */
-footer {width: 100%; height: 60px; margin: auto;}
+footer {width: 100%; height: 60px; margin: auto; margin-top: 200px;}
 .footer-area p {text-align: center; color: #6fffe9;}
 
 /* -------ADD  ------------ */
 
 .add-outline-1 {margin-bottom: 20px; padding:20px;}
 .add-border {border-radius: 15px;}
+.add-margin {margin: 20px;}
+
+#contact-card-btn {}
+
+#contact-card-btn:checked ~ .card-effect-1{box-shadow: 0px 0px 1px 5px #6fffe9;}
+
+#contact-card-btn-2 {}
+
+#contact-card-btn-2:checked ~ .card-effect-1{box-shadow: 0px 0px 1px 5px #6fffe9;}
+
+.row:hover {box-shadow: 0px 0px 1px 5px #6fffe9;}
+
+
+/* ------------- RESUME BUTTON -------- */
+.resume-page-btn { width: 60px; height: 150px; position: fixed; background: #6fffe9; bottom: 10%; right: -53px; padding-top: 0px; box-sizing: border-box;}
+.resume-page-btn h3 {transform: rotate(90deg); font-size: 40px; position: absolute;left: -40px; right: -21px;}
+
+.resume-page-btn:hover {right: 0px;}
+
+
+
