--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -35,13 +35,18 @@
     .project-company {display: none;} 
 
     .media-file-s {width: 100%; text-align: center; display: inline-block; margin-top: 20px; box-sizing: border-box;}
-    .media-file-s iframe {width: 100%; }
+    .media-file-s iframe {width: 100%; height: 300px;}
     
     .mobile {display: none;}
     .tablet {display: none;}
 }
 /* Điện thoại chiều ngang */
 @media  screen and (min-width:480px) {
+}
+
+@media screen and (min-width: 601px) and (max-width: 766px) {
+    #img-front {top: 60px;right: -50px;width: 120%; animation-name: none ;}
+    #img-back {top: 60px;right: -90px;width: 105%; animation: none;}
 }
 
 /* Tablet - chiều dọc */
@@ -56,6 +61,8 @@
 
 
     .left {width: 40%; float: right;}
+    #img-front {top: 60px;right: -50px;width: 120%; animation-name: none ;}
+    #img-back {top: 60px;right: -90px;width: 105%; animation: none;}
     .box-1 {display: none;}
     .box-2 {display: none;}
 
@@ -68,7 +75,7 @@
 
 
     /* ----Project-part---- */
-    .text {padding: 50px 15% 0% 15%;}
+    .text {padding: 50px 50px 0% 50px;}
     .text h1{font-size: 30px; letter-spacing: 3px; text-align: center;}
     .timeline {width: 70%;}
 
@@ -107,7 +114,8 @@
     .text-block {margin-top: 40px; padding-right: 40px;}
     #nav-mobile-button {display: none;}
     #resume-btn {display: block;}
-    .box-2{display: none;top: 50%;z-index: 1;}
+    /* .box-2{display: none;top: 50%;z-index: 1;} */
+    .box-1 .box-2 {display: none;}
     #hello-h1-1, #hello-h1-2 {font-size: 40px;}    
 
     .project-icon {display: none;}
@@ -119,7 +127,7 @@
 
 
     .media-file {width: 100%; height: 400px; text-align: center; display: inline-block; margin-top: 20px;}
-    .media-file iframe {width: 1000px; height: 500px;}
+    .media-file iframe {width: 100%; height: 500px;}
 
     /* -------- Project --------- */
     .row:hover {box-shadow: 0px 0px 1px 5px #6fffe9;}
@@ -141,7 +149,7 @@
 /* Tablet to - ngang */
 @media  screen and (min-width:1024px) and (min-height:1366px) {
     nav ul {margin-left: 23%;}
-    .box-2{display: block;top: 50%;z-index: 1;}
+    .box-2{display: none;top: 50%;z-index: 1;}
     #hello-h1-1, #hello-h1-2 {font-size: 40px;}
 }
 
