--- a/assets/css/style-dark-version.css
+++ b/assets/css/style-dark-version.css
@@ -21,7 +21,7 @@ b{color: #6fffe9;}
 body{ height: 100%;background-color: #0b132b; }
 
 
-#all { width: 100%; height:100%;background-color: #0b132b; box-sizing: border-box; padding:20px; z-index: -1;}
+#all { width: 100%; height:100%;background-color: #1c2541;; box-sizing: border-box; padding:20px; z-index: -1;}
 
 .mobile {display: display;}
 .tablet {display: none;}
