--- a/assets/css/style-dark-version.css
+++ b/assets/css/style-dark-version.css
@@ -14,14 +14,14 @@
 
 
 html,body,div,ul,ol,li,a,img,span,p,b,input,label {
-	color: #5bc0be;
+	color: white;
 }
 b{color: #6fffe9;}
 
-body{ height: 100%;background-color: #0b132b; }
+body{ height: 100%;background-color: #1c2541; }
 
 
-#all { width: 100%; height:100%;background-color: #1c2541;; box-sizing: border-box; padding:20px; z-index: -1;}
+#all { width: 100%; height:100%;background-color: #1c2541; box-sizing: border-box; padding:20px; z-index: -1;}
 
 .mobile {display: display;}
 .tablet {display: none;}
@@ -45,12 +45,12 @@ header::after {
 #nav-mobile-button {float: right; cursor: pointer;}
 #nav-mobile-button img{width: 30px; position: fixed; top: 15px; right: 5%;}
 /* #background-nav{position: fixed;top: 0;bottom: 0;left: 0;right: 0; background-color: rgba(0,0,0,.3);} */
-.nav-mobile {background-color: #0b132b; position: fixed; width: 100%;top: 0; right: 0;bottom: 0; transform: translateX(100%); opacity:0;transition: transform linear 0.15s, opacity linear .15s;}
+.nav-mobile {background-color: #0b132b; position: fixed; width: 100%;top: 0; right: 0;bottom: 0; transform: translateX(100%); opacity:0;transition: transform linear 0.15s, opacity linear .15s; }
 .mobile-close img {position: absolute; width: 25px; top: 30px; left: 80%; cursor: pointer;}
 .mobile-logo img {position: absolute; width: 33px; top: 25px; left: 10%;}
 
 .nav-mobile ul {margin-top: 80px;}
-.nav-mobile ul li {padding-bottom: 20px; padding-left:30%;padding-top: 20px;font-size: 25px; text-align: left; letter-spacing: 4px; width: 100%;}
+.nav-mobile ul li {padding-bottom: 20px; padding-left:30%;padding-top: 20px;font-size: 25px; text-align: left; letter-spacing: 4px; width: 100%;color: #5bc0be;}
 .nav-mobile ul li:hover {background-color: #5bc0be; color: #0b132b;} 
 .nav-mobile ul li:hover .nav-icon {display: none;}
 .nav-mobile ul li:hover .mobile-icon-hover{display: block;}
@@ -187,7 +187,7 @@ section {width: 100%; min-height: 100px; margin:0px 0px; z-index: inherit; box-s
 
 /* ------FOOTER ---------- */
 footer {width: 100%; height: 60px; margin: auto; margin-top: 200px;}
-.footer-area p {text-align: center; color: #6fffe9;}
+.footer-area p {text-align: center; color: white;}
 
 /* -------ADD  ------------ */
 
