--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -39,6 +39,9 @@
     
     .mobile {display: none;}
     .tablet {display: none;}
+
+    .text h2 {font-size: 25px; letter-spacing: 2px; text-align: center; font-style: italic;}
+    .text h1 {margin-bottom: 20px; font-size: 40px; text-align: center;}
 }
 /* Điện thoại chiều ngang */
 @media  screen and (min-width:480px) {
@@ -121,13 +124,15 @@
     .project-icon {display: none;}
     .project-company {display: block;}
 
-    .text h2 {font-size: 40px; letter-spacing: 3px; text-align: center; font-style: italic;}
     .tablet {display: block;}
+
+    .text {margin-top: 100px;}
+    .text h2 {font-size: 40px; letter-spacing: 3px; text-align: center; font-style: italic;}
     .text h1 {margin-bottom: 10px; font-size: 40px;}
 
 
     .media-file {width: 100%; height: 400px; text-align: center; display: inline-block; margin-top: 20px;}
-    .media-file iframe {width: 100%; height: 500px;}
+    .media-file iframe {width: 1000px; height: 500px;}
 
     /* -------- Project --------- */
     .row:hover {box-shadow: 0px 0px 1px 5px #6fffe9;}
