--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -17,6 +17,7 @@
     .col-70p-mobile {width: 70%;}
     .col-100p-mobile {width: 100%;}
     .col-100p-mobile img {width: 50px; display: inline-block;}   
+    
 
     .grid {width: 100%; min-height: 100%; background-color: #1c2541; float: left; box-sizing: border-box; position: relative;}
     .grid-content {width:40%; min-height: 1% ;position: absolute; text-align: center; color: black; top: 20%; left: 30%; background-color:#3a506b; display: none;}
@@ -37,14 +38,27 @@
     .media-file-s {width: 100%; text-align: center; display: inline-block; margin-top: 20px; box-sizing: border-box;}
     .media-file-s iframe {width: 100%; height: 300px;}
     
-    .mobile {display: none;}
+    .mobile {display: block;}
     .tablet {display: none;}
 
-    .text h2 {font-size: 25px; letter-spacing: 2px; text-align: center; font-style: italic;}
-    .text h1 {margin-bottom: 20px; font-size: 40px; text-align: center;}
+    .text {padding: 20px 0px; text-align: left;}
+    .text h1 {font-size: 25px; letter-spacing: 3px; margin-bottom: 10px; margin-top: 0px; color: #6fffe9; text-transform: uppercase;}
+
+    /* .text h2 {font-size: 25px; text-align: left; font-style: italic;}
+    .text h1 {margin-bottom: 20px; font-size: 40px; text-align: center;} */
+    
+    .content-area {width: 100%;margin: auto;}
+
+    .project-describe {color: white;}
+    .project-describe:hover {color: #6fffe9;}
+    .project-describe h2{text-align: left; font-size: 18px; font-style: normal;}
+    .project-describe h3{text-align: left;}
+    .project-describe:hover ul li {color: #6fffe9;}
+    .project-describe ul li{text-align: left; font-size: 18px; color: white; padding-bottom: 10px;}
 }
 /* Điện thoại chiều ngang */
 @media  screen and (min-width:480px) {
+    .mobile {display: block;}
 }
 
 @media screen and (min-width: 601px) and (max-width: 766px) {
@@ -55,7 +69,7 @@
 /* Tablet - chiều dọc */
 @media  screen and (min-width:601px) {
     
-    #logo {left: 10%;}
+    /* #logo {left: 10%;} */
 
     #nav-mobile-button img {}
     .nav-mobile {width: 50%;}
@@ -73,7 +87,7 @@
     #hello-h1-1, #hello-h1-2 {font-size: 30px;}
     .des {width: 100%; float: left;}
     section {box-sizing: border-box; padding: 20px;}
-    .mobile {display: none;}
+    /* .mobile {display: none;} */
     .tablet {display: none;}
 
 
@@ -85,6 +99,9 @@
     /* ---- Index ---- */
     .grid {width: 100%; min-height: 100%; background-color: #1c2541; float: left; box-sizing: border-box; position: relative;}
     .grid-content {width:40%; min-height: 1% ;position: absolute; text-align: center; color: black; top: 20%; left: 30%; background-color:#3a506b; display: none;}
+
+    .text {margin-top: 50px; padding: 20px 0px; text-align: center;}
+    
     
 }
 
@@ -95,23 +112,28 @@
     #nav-mobile-button img {}
     .nav-mobile {width: 40%;}
     .mobile-close img {}
-    #logo{left: 8%;}
+    /* #logo{left: 8%;} */
     nav {display: block;}
     
     .grid-s {width: 33.3%; height: 400px; background-color: #1c2541; float: left; box-sizing: border-box;}
     .grid-s img{object-fit:cover; width: 100%; height: 100%; position: relative;}
     .grid-s:hover img{opacity: .6;}
+
+    .mobile {display: none;}
 }
+
 
 /* Tablet to - dọc */
 @media  screen and (min-width:769px) {
     .col-30p-desktop {width: 30%; }
     .col-70p-desktop {width: 70%;}
+    .col-50p-desktop {width: 50px;}
     .col-100p-desktop {width: 100%;}
 
+    .col-70p-desktop {border-left: 2px solid white; padding-left: 20px;}
+    /* .col-30p-desktop img {width: 50px; width: 120px;}  */
+    .row img {width: 150px;}
 
-    .col-30p-desktop img {width: 50px; margin-top: 20px;} 
-    
     .contact h4{text-align: left;}
 
     .text-block {margin-top: 40px; padding-right: 40px;}
@@ -126,13 +148,13 @@
 
     .tablet {display: block;}
 
-    .text {margin-top: 100px;}
-    .text h2 {font-size: 40px; letter-spacing: 3px; text-align: center; font-style: italic;}
+    .text {margin-top: 50px; padding: 20px 0px; text-align: center;}
+    .text h2 {font-size: 30px; letter-spacing: 3px; text-align: center; font-style: italic;}
     .text h1 {margin-bottom: 10px; font-size: 40px;}
 
 
     .media-file {width: 100%; height: 400px; text-align: center; display: inline-block; margin-top: 20px;}
-    .media-file iframe {width: 1000px; height: 500px;}
+    .media-file iframe {width: 100%; height: 500px;}
 
     /* -------- Project --------- */
     .row:hover {box-shadow: 0px 0px 1px 5px #6fffe9;}
@@ -148,20 +170,35 @@
     .project-describe:hover ul li {color: #6fffe9;}
     .project-describe ul li{text-align: left; font-size: 20px; color: white;}
 
+
+    /* ---------- Media Block ----------- */
+    .media-block { transform: scale(1.1); margin: 120px 0px;}
+
+    /* ----------CONTENT AREA ----------- */
+    .content-area {width: 90%;margin: auto;}
     
 }
 
 /* Tablet to - ngang */
 @media  screen and (min-width:1024px) and (min-height:1366px) {
     nav ul {margin-left: 23%;}
+    /* nav {margin: auto;} */
     .box-2{display: none;top: 50%;z-index: 1;}
     #hello-h1-1, #hello-h1-2 {font-size: 40px;}
+
+    .grid-d {width: 48.5%; height: 200px; background-color: #1c2541; float: left; box-sizing: border-box; margin: 5px;}
+    .grid-d img{object-fit:cover; width: 100%; height: 100%; position: relative;}
+    .grid-d img::before {content: "Hello"; font-size: 30px;}
+    .grid-d:hover img{opacity: .6;}
+
+    
 }
 
 /* Desktop */
 @media  screen and (min-width:1025px) {
-    
-    #logo {left:5%}
+   
+    /* #logo {left: 0;} */
+    .row {width: 60%; padding: 20px; margin: 30px auto ;}
 
     .left {width: 50%; position: relative; box-sizing: border-box;}
     #img-back-ndisp{width: 60%; visibility: hidden; margin-bottom: 20px;}
