--- a/assets/css/style-dark-version.css
+++ b/assets/css/style-dark-version.css
@@ -29,7 +29,7 @@ body{ height: 100%;background-color: #1c2541; }
 
 /* ----- HEADER ------ */
 
-header { width: 100%; height: 60px; background-color:#0b132b; position: fixed; top: 0; left: 0; box-shadow: 0px 0px 1px 3px #3a506b;; z-index: 2; box-sizing: border-box; }
+header { width: 100%; height: 60px; background-color:#0b132b; position: fixed; top: 0; left: 0; box-shadow: 0px 0px 1px 3px #6fffe9; z-index: 2; box-sizing: border-box; }
 
 header::after {
   content: "";
@@ -123,9 +123,9 @@ a.button.six:hover:after{
 }
 
 /* Resume button - Desktop */
-#resume-btn {width: 10%; height: 35px; background-color: #6fffe9; position: fixed; right: 0; top: 12px; border-bottom-left-radius: 20px; border-top-left-radius: 20px; text-align: center; display: none;}
+#resume-btn {width: 10%; height: 35px; background-color: #6fffe9; position: fixed; right: 0; top: 12px; border-bottom-left-radius: 20px; border-top-left-radius: 20px; text-align: center; display: none;  transition: width .5s;}
 #resume-btn p{color: #3a506b; line-height: 35px; font-size: 20px; font-weight:900;}
-#resume-btn:hover {cursor: pointer; background-color:#5bc0be; width: 12%; transform: width .5s;}
+#resume-btn:hover {cursor: pointer; background-color:#5bc0be; width: 12%;}
 
 /* -----CONTAINER------ */
 
@@ -204,14 +204,21 @@ footer {width: 100%; height: 60px; margin: auto; margin-top: 200px;}
 
 #contact-card-btn-2:checked ~ .card-effect-1{box-shadow: 0px 0px 1px 5px #6fffe9;}
 
+.status {width: 15%; height: 30px; border-radius: 10px; line-height: 30px; text-align: center; }
+.complete {background: #2ECC71; color: #1D8348;box-shadow: 0px 0px 1px 1px #239B56 ;}
+.suspended {background:#F39C12; color: #9C640C;box-shadow: 0px 0px 1px 1px #B9770E; }
+.doing {background: #E74C3C;color: #943126;box-shadow: 0px 0px 1px 1px #B03A2E ; }
+.status:hover {opacity: 0.8;}
+/*https://htmlcolorcodes.com */
 
-
+.certificate {text-align: left; padding-top: 20px;}
 
 /* ------------- RESUME BUTTON -------- */
-.resume-page-btn { width: 60px; height: 150px; position: fixed; background: #6fffe9; bottom: 10%; right: -53px; padding-top: 0px; box-sizing: border-box;}
+.resumbe-page-btn {width: 300px; height: 60px;position: fixed; bottom: 0% ;background: #6fffe9; bottom: 10%; box-sizing: border-box;}
+/* .resume-page-btn { width: 60px; height: 150px; position: fixed; background: #6fffe9; bottom: 10%; right: -53px; padding-top: 0px; box-sizing: border-box;}
 .resume-page-btn h3 {transform: rotate(90deg); font-size: 40px; position: absolute;left: -40px; right: -21px;}
 
-.resume-page-btn:hover {right: 0px;}
+.resume-page-btn:hover {right: 0px;} */
 
 
 
