--- a/assets/css/style-dark-version.css
+++ b/assets/css/style-dark-version.css
@@ -204,11 +204,20 @@ footer {width: 100%; height: 60px; margin: auto; margin-top: 200px;}
 
 #contact-card-btn-2:checked ~ .card-effect-1{box-shadow: 0px 0px 1px 5px #6fffe9;}
 
-.status {width: 15%; height: 30px; border-radius: 10px; line-height: 30px; text-align: center; }
+/* .status {width: 15%; height: 30px; border-radius: 10px; line-height: 30px; text-align: center; }
 .complete {background: #2ECC71; color: #1D8348;box-shadow: 0px 0px 1px 1px #239B56 ;}
 .suspended {background:#F39C12; color: #9C640C;box-shadow: 0px 0px 1px 1px #B9770E; }
 .doing {background: #E74C3C;color: #943126;box-shadow: 0px 0px 1px 1px #B03A2E ; }
-.status:hover {opacity: 0.8;}
+.status:hover {opacity: 0.8;} */
+
+.status {margin-bottom: 15px; height: 10px; width: 0%;}
+.status.complete::after, .status.doing::after, .status.suspended::after {width:17%; }
+.complete::after {position: absolute; content: "Completed"; height: 25px; background: rgba(39, 174, 96 ,.9); color: #D5F5E3 ;box-shadow: 0px 0px 1px 1px #239B56 ; z-index:0; border-radius: 10px; line-height: 25px; text-align: center; font-weight: bold; }
+.doing::after {position: absolute; content: "Doing"; height: 25px; background: rgba(231, 76, 60 ,.8);color: #FADBD8 ;box-shadow: 0px 0px 1px 1px #B03A2E ; z-index:0; border-radius: 10px; line-height: 25px; text-align: center; font-weight: bold; }
+.suspended::after {position: absolute; content: "Suspended"; height: 25px; background:rgba(241, 196, 15,.8); color: #FCF3CF;box-shadow: 0px 0px 1px 1px #B9770E; z-index:0; border-radius: 10px; line-height: 25px; text-align: center; font-weight: bold; }
+
+
+
 /*https://htmlcolorcodes.com */
 
 .certificate {text-align: left; padding-top: 20px;}
