--- a/assets/css/style-dark-version.css
+++ b/assets/css/style-dark-version.css
@@ -223,7 +223,10 @@ footer {width: 100%; height: 60px; margin: auto; margin-top: 200px;}
 .certificate {text-align: left; padding-top: 20px;}
 
 /* ------------- RESUME BUTTON -------- */
-.resumbe-page-btn {width: 300px; height: 60px;position: fixed; bottom: 0% ;background: #6fffe9; bottom: 10%; box-sizing: border-box;}
+
+.resume-download {width: 300px; height: 80px ; box-sizing: border-box; background-color: #5bc0be; margin: auto; line-height: 80px;}
+
+.download-link:hover .resume-download{background: #6fffe9; color: #1c2541;}
 /* .resume-page-btn { width: 60px; height: 150px; position: fixed; background: #6fffe9; bottom: 10%; right: -53px; padding-top: 0px; box-sizing: border-box;}
 .resume-page-btn h3 {transform: rotate(90deg); font-size: 40px; position: absolute;left: -40px; right: -21px;}
 
