--- a/assets/css/style-dark-version.css
+++ b/assets/css/style-dark-version.css
@@ -225,6 +225,7 @@ footer {width: 100%; height: 60px; margin: auto; margin-top: 200px;}
 /* ------------- RESUME BUTTON -------- */
 
 .resume-download {width: 300px; height: 80px ; box-sizing: border-box; background-color: #5bc0be; margin: auto; line-height: 80px;}
+.download-link {width: 300px; height: 80px ; display: inline-block;}
 
 .download-link:hover .resume-download{background: #6fffe9; color: #1c2541;}
 /* .resume-page-btn { width: 60px; height: 150px; position: fixed; background: #6fffe9; bottom: 10%; right: -53px; padding-top: 0px; box-sizing: border-box;}
